fixed overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,6 @@
   height: 76vh;
 }
 
-.btn-red {
-  color: red;
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
